# barevisor

./: .gitignore  LICENSE  README.md
src/: uefi.code-workspace  windows.code-workspace
src/hvcore/: Cargo.toml  README.md  deny.toml
src/hvcore/src/: lib.rs
src/hvcore/src/hypervisor/: allocator.rs  apic.rs  apic_id.rs  capture_registers.S  capture_registers.inc  capture_registers.rs  gdt_tss.rs  host.rs  init.rs  interrupt_handlers.S  interrupt_handlers.rs  mod.rs  paging_structures.rs  platform_ops.rs  registers.rs  segment.rs  serial_logger.rs  support.rs  svm.rs  svm_run_vm.S  switch_stack.S  switch_stack.rs  vmm.rs  x86_instructions.rs
src/hvcore/src/hypervisor/amd/: guest.rs  mod.rs  npts.rs  run_guest.S  svm.rs  svm_run_vm.S  svm_vm.rs
src/hvcore/src/hypervisor/intel/: epts.rs  guest.rs  init.rs  mod.rs  mtrr.rs  run_guest.S  vm.rs  vmcs.rs  vmx.rs  vmx_run_vm.S  vmx_vm.rs
src/hvcore/src/intel/: epts.rs  mtrr.rs  run_vmx_vm.S  vm.rs  vmcs.rs
src/hvcore/src/utils/: mod.rs  paging_structures.rs  panic.rs  platform.rs  system_ops.rs  x86_instructions.rs
src/uefi/: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
src/uefi/.cargo/: config.toml
src/uefi/check_hv_vendor/: Cargo.toml
src/uefi/check_hv_vendor/src/: main.rs
src/uefi/tests/: startup.nsh
src/uefi/tests/bochs/: README.md  linux_amd.bxrc  linux_intel.bxrc
src/uefi/uefi_hv/: Cargo.toml
src/uefi/uefi_hv/src/: allocator.rs  main.rs  ops.rs  println.rs
src/uefi/xtask/: Cargo.toml
src/uefi/xtask/src/: cargo.rs  main.rs
src/uefi/xtask/src/vmtest/: bochs.rs  mod.rs  vmware.rs
src/windows/: .gitattributes  Cargo.toml  Makefile.toml  README.md  deny.toml
src/windows/check_hv_vendor/: Cargo.toml
src/windows/check_hv_vendor/src/: main.rs
src/windows/win_hv/: Cargo.toml  build.rs
src/windows/win_hv/src/: eprintln.rs  lib.rs  ops.rs
