[workspace]
members = ["check_hv_vendor", "uefi_hv", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Satoshi Tanda <tanda.sat@gmail.com>"]
description = "A minimalistic hypervisor for UEFI on AMD and Intel processors"
license = "MIT"
repository = "https://github.com/tandasat/barevisor"
keywords = ["AMD", "Intel", "hypervisor"]
categories = ["development-tools::testing", "no-std"]
readme = "./README.md"
publish = false

[workspace.lints.rust]
# groups: https://doc.rust-lang.org/rustc/lints/groups.html
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

# warnings that are not enabled by default or covered by groups
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

# https://github.com/rust-lang/rust-clippy/blob/master/README.md
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
doc_markdown = "allow"

# https://doc.rust-lang.org/rustdoc/lints.html
[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
invalid_html_tags = "warn"
unescaped_backticks = "warn"
