[package]
name = "check_hv_vendor"
description = "The hypervisor vendor checker for UEFI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish.workspace = true

[lints]
workspace = true

# no_std cannot support `cargo test` and `cargo bench`
[[bin]]
name = "check_hv_vendor"
test = false
bench = false

[dependencies]
raw-cpuid = "11.0"
uefi = { version = "0.27", default-features = false }
uefi-services = { version = "0.24", default-features = false }
