[package]
name = "uefi_hv"
description = "Demo client for a UEFI environment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# no_std cannot support `cargo test` and `cargo bench`
[[bin]]
name = "uefi_hv"
test = false
bench = false

[dependencies]
uefi = { version = "0.27", default-features = false }
x86 = "0.52"
hv = { path = "../../hvcore", features = ["uefi"] }

[lints]
workspace = true
