[package]
name = "xtask"
description = "A build and test assist program"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
wsl = "0.1"
vnc = "0.4"
