[package]
name = "check_hv_vendor"
description = "The hypervisor vendor checker for Windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
core_affinity = "0.8.1"
raw-cpuid = "11.2.0"
