[package]
name = "win_hv"
description = "Barevisor as a Windows driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish.workspace = true

[lints]
workspace = true

# no_std cannot support `cargo test` and `cargo bench`
[lib]
crate-type = ["cdylib"]
test = false
bench = false

[dependencies]
hv = { path = "../../hvcore" }
spin = "0.9"
wdk = "0.3"
wdk-sys = "0.3"

[build-dependencies]
wdk-build = "0.3"
