[package]
name = "win_hv"
description = "Barevisor as a Windows driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
test = false
bench = false

[dependencies]
hv = { path = "../../hvcore" }
spin = "0.9.8"
wdk = "0.2"
wdk-sys = "0.2"

[build-dependencies]
wdk-build = "0.2"
